--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "prettier --write './**/*.{js,jsx,ts,tsx}'"
   },
   "dependencies": {
+    "@prisma/client": "^5.14.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
@@ -23,6 +24,7 @@
     "eslint-config-prettier": "^9.1.0",
     "postcss": "^8",
     "prettier": "^3.2.5",
+    "prisma": "^5.14.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
