--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "format": "prettier --write './**/*.{js,jsx,ts,tsx}'"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.14.0",
     "next": "14.2.3",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18"
   },
