--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
     "prettier": "^3.2.5",
     "prisma": "^5.14.0",
     "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   }
 }
